--- a/.github/triage_bot_config.json
+++ b/.github/triage_bot_config.json
@@ -1,18 +1,20 @@
 {
   "labels": [
     {
-      "label": ":raising_hand_woman: Feature", // Label to be used
+      "label": "enhancement",
       "globs": [ // Globs to match in the issue body
         "*# Feature*",
-        "request"
-      ]
+        "enhancement"
+      ],
+      "comment": "This feature request is now a candidate for our backlog. The community has 60 days to upvote 👍 the issue. If it receives 20 upvotes we will move it to our backlog. If not, w will close it."
     },
     {
-      "label": ":bug: Bug",
+      "label": "bug",
       "globs": [
-        "*# Bug*"
+        "*# Bug*",
+        "bug
       ],
-      "comment": "Thank you for creating a bug report, if you haven't already please ensure you have provided context on the bug and a minimal repo where we can reproduce the issue." // Comment on an issue with this label
+      "comment": "Thank you for creating a bug report, if you haven't already please ensure you have provided include steps to reproduce it and as much context as possible."
     }
   ]
 }
