--- a/.github/triage_bot_config.json
+++ b/.github/triage_bot_config.json
@@ -2,7 +2,7 @@
   "labels": [
     {
       "label": "enhancement",
-      "globs": [ // Globs to match in the issue body
+      "globs": [
         "*# Feature*",
         "enhancement"
       ],
