--- a/.github/label-actions.yml
+++ b/.github/label-actions.yml
@@ -1,6 +1,6 @@
 bug:
   comment: |
-    Thank you for creating a bug report, if you haven't already please ensure you have provided include steps to reproduce it and as much context as possible.
+    Thank you for creating a bug report, if you haven't already, please ensure you have provided steps to reproduce it and as much context as possible.
 enhancement:
   comment: |
     Thank you for raising this issue. 
